--- a/app/css/index.css
+++ b/app/css/index.css
@@ -36,10 +36,13 @@ body {
 .contact-block .contact-block__time ul li {
     margin-right: 35px;
 }
-.contact-block .contact-block__time ul li a p {
+.contact-block .contact-block__time ul li a .city {
     border-bottom: 1px solid #1F2933;
     margin: 0;
     display: inline-block;
+}
+.contact-block__time ul li a p {
+    margin: 0;
 }
 .contact-block .contact-block__time ul li .call-link {
     text-decoration: underline;
@@ -55,12 +58,15 @@ body {
     font-weight: 600;
     font-size: 14px;
     line-height: 21px;
-    display: block;
+    display: flex;
 }
 .contact-block .contact-block__time ul li a span {
     display: inline-block;
     vertical-align: middle;
     margin-right: 8px;
+}
+.contact-block__time .mobile-logo {
+    display: none;
 }
 
 .contact-block .contact-block__garant ul {
@@ -101,6 +107,7 @@ body {
     top: 77px;
     left: 12%;
     text-align: center;
+    z-index: 1;
 }
 #modalCity .modal-header {
     border: 0;
@@ -150,6 +157,7 @@ body {
     position: absolute;
     top: 77px;
     left: 19%;
+    z-index: 1;
 }
 #modalAddress .modal-content div {
     margin-bottom: 23px;
@@ -227,10 +235,14 @@ body {
     font-size: 14px;
     line-height: 21px;
     color: #1F2933;
+    display: flex;
+    align-items: center;
 }
 #modalCallback .privacy-policy label a {
     background: none;
     text-decoration: underline;
+    color: #9BBABD;
+    width: auto;
 }
 #modalCallback .send-form {
     width: 154px;
@@ -250,6 +262,7 @@ body {
     justify-content: start;
     align-items: center;
     margin-bottom: 30px;
+    position: relative;
 }
 .header_fixed{
     position: fixed;
@@ -260,7 +273,10 @@ body {
     right: 0;
     margin: 0 auto;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-    padding: 15px;
+    padding: 15px 0;
+}
+.catalog-mobile-menu {
+    display: none;
 }
 .search-block__logo {}
 .search-block__input {
@@ -309,7 +325,11 @@ body {
     color: #7B8794;
     font-size: 10px;
     line-height: 15px;
-    display: block;
+    display: flex;
+    flex-direction: column;
+}
+.search-block__social-icons ul li a p {
+    margin: 10px 0 0 0;
 }
 .search-block__social-icons ul li a span {
     display: block;
@@ -327,7 +347,7 @@ body {
     margin-left: 34px;
     display: flex;
 }
-.catalog-btn, .fixed-menu {
+.catalog-btn, .fixed-menu, .mobile-menu {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -336,10 +356,19 @@ body {
     background: #51777C;
     border-radius: 5px;
 }
+.mobile-menu {
+    display: none;
+}
+.mobile-menu {
+    margin: 0 15px;
+}
 .catalog-btn .btn-menu-cross {
     display: none;
 }
 .fixed-menu .btn-menu-cross {
+    display: none;
+}
+.mobile-menu .btn-menu-cross {
     display: none;
 }
 .catalog-menu {
@@ -372,20 +401,28 @@ body {
     left: 0;
     z-index: 100;
 }
-.catalog-menu .dropend {
-    width: 100%;
+.catalog-menu ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+.catalog-menu ul li {
     margin-bottom: 20px;
     background: transparent;
 }
-.catalog-fixed-menu .dropend {
-    width: 100%;
-    margin-bottom: 20px;
-    background: transparent;
-}
-.catalog-menu .dropend:last-child {
+.catalog-menu ul li:last-child {
     margin-bottom: 0;
 }
-.catalog-fixed-menu .dropend:last-child {
+.catalog-fixed-menu ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+.catalog-fixed-menu ul li {
+    margin-bottom: 20px;
+    background: transparent;
+}
+.catalog-fixed-menu ul li:last-child {
     margin-bottom: 0;
 }
 .catalog-menu .dropBtn {
@@ -399,6 +436,7 @@ body {
     padding: 8px 10px;
     display: flex;
     align-items: center;
+    text-decoration: none;
 }
 .catalog-fixed-menu .dropBtn {
     background: #ffffff;
@@ -411,6 +449,7 @@ body {
     padding: 8px 10px;
     display: flex;
     align-items: center;
+    text-decoration: none;
 }
 .catalog-menu .dropBtn span {
     margin-right: 10px
@@ -419,13 +458,6 @@ body {
     position: absolute;
     right: 0;
     margin-right: 0;
-}
-.catalog-menu .dropBtn:focus {
-    border: 0;
-    box-shadow: none;
-}
-.catalog-menu .dropBtn::after {
-    border: 0;
 }
 .catalog-menu .dropBtn:hover {
     background: #51777C;
@@ -444,13 +476,6 @@ body {
     right: 0;
     margin-right: 0;
 }
-.catalog-fixed-menu .dropBtn:focus {
-    border: 0;
-    box-shadow: none;
-}
-.catalog-fixed-menu .dropBtn::after {
-    border: 0;
-}
 .catalog-fixed-menu .dropBtn:hover {
     background: #51777C;
     border-radius: 4px;
@@ -460,7 +485,8 @@ body {
     fill: white;
 }
 
-.catalog-menu .sub-catalog-menu {
+.sub-catalog-menu {
+    display: none;
     width: 285px;
     height: 208px;
     background: #FFFFFF;
@@ -468,10 +494,11 @@ body {
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
     border-radius: 15px;
     position: absolute;
-    top: -20px !important;
+    top: 0;
     z-index: 1;
-    left: 30px !important;
-    padding: 20px;
+    left: 105%;
+    padding: 20px !important;
+    list-style: none;
 }
 .catalog-menu .sub-catalog-menu li {
     margin-bottom: 35px;
@@ -493,6 +520,31 @@ body {
     border-radius: 4px;
     color: #ffffff;
 }
+
+.catalog-fixed-menu .sub-catalog-menu li {
+    margin-bottom: 35px;
+}
+.catalog-fixed-menu .sub-catalog-menu li:last-child {
+    margin-bottom: 0;
+}
+.catalog-fixed-menu .sub-catalog-menu li a {
+    text-decoration: none;
+    color: #1F2933;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 21px;
+    display: flex;
+    padding: 6px;
+}
+.catalog-fixed-menu .sub-catalog-menu li a:hover {
+    background: #51777C;
+    border-radius: 4px;
+    color: #ffffff;
+}
+
+
+
+
 .navbar-block__menu .dropdown {
     position: relative;
     display: inline-block;
@@ -888,7 +940,7 @@ img {
 
 .install__block {
   text-decoration: none;
-  width: 688px;
+  width: auto;
   max-width: 100%;
   height: 350px;
   background: linear-gradient(135deg, #51777C 0%, #C4D5C4 100%);
@@ -898,6 +950,7 @@ img {
   padding-bottom: 200px;
   position: relative;
   overflow: hidden;
+    display: block;
 }
 
 .install__block--bg {
@@ -1261,6 +1314,47 @@ img {
   padding: 15px;
 }
 
+.tabs-items .address-box {
+    display: none;
+    width: 343px;
+    height: 266px;
+    padding: 20px;
+    background: #FFFFFF;
+    border: 1px solid #E4E7EB;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+    border-radius: 15px;
+}
+.tabs-items .address-box ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+.tabs-items .address-box ul li {
+    margin-bottom: 35px;
+}
+.tabs-items .address-box ul li p {
+    margin: 0;
+    display: flex;
+}
+.tabs-items .address-box ul li p span {
+    display: flex;
+    margin-right: 10px;
+}
+.tabs-items .address-box a {
+    display: flex;
+    justify-content: center;
+    width: 303px;
+    height: 48px;
+    padding: 12px 20px;
+    background: #DE7ABB;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #ffffff;
+}
+.tabs-items .address-box a span {
+    display: flex;
+    margin-right: 10px;
+}
 .map-popup {
   background: #ffffff;
   padding: 18px;
@@ -1375,9 +1469,9 @@ img {
 .adress__item:hover svg, .adress__item:active svg {
   stroke: #fff;
 }
-.address-swiper .swiper-slide {
-    width: auto;
-}
+/*.address-swiper .swiper-slide {*/
+/*    width: auto;*/
+/*}*/
 .scroll-up {
     position: fixed;
     width: 56px;
@@ -1789,6 +1883,98 @@ img {
   }
 }
 
+@media (max-width: 768px) {
+    .contact-block .contact-block__time ul li:last-child {
+        display: none;
+    }
+    .contact-block .contact-block__garant {
+        display: none;
+    }
+
+    .search-block .search-block__input {
+        width: 261px;
+        margin-left: 15px;
+    }
+    .search-block .search-block__social-icons {
+        margin-left: 22px;
+    }
+    .search-block .search-block__social-icons ul {
+        align-items: center;
+    }
+    .search-block .search-block__social-icons ul li {
+        margin-left: 23px;
+    }
+    .search-block .search-block__social-icons ul li:first-child {
+        margin-left: 0;
+    }
+    .search-block .search-block__social-icons ul li a svg {
+        width: 20px;
+        height: 20px;
+    }
+    .search-block .search-block__social-icons ul li a p {
+        display: none;
+    }
+    .mobile-menu {
+        display: flex;
+    }
+    .search-block .header_fixed .mobile-menu {
+        display: none;
+    }
+    .navbar-block {
+        display: none;
+    }
+    .slider-block .slider-block__slide {
+        width: 100%;
+    }
+    .slider-block .slider-image {
+        width: 370px;
+        top: 140px;
+    }
+    .category-block {
+        overflow-y: scroll;
+        padding: 0 0 20px 0;
+    }
+    .catalog-mobile-menu {
+        width: 375px;
+        height: auto;
+        position: fixed;
+        display: none;
+    }
+    .category-block .category-block__box {
+        margin-right: 16px;
+    }
+    .category-block .category-block__box:last-child {
+        margin-right: 0;
+    }
+    .popular .item__basket {
+        font-size: 13px;
+    }
+    .install__block--bg {
+        margin-left: 0;
+    }
+    .adress__items {
+        flex-wrap: nowrap;
+        overflow-x: auto;
+    }
+    .adress__item {
+        flex: 0 0 auto;
+        margin-right: 30px;
+    }
+    .footer-block {
+        flex-direction: column;
+    }
+    .footer .subscribe__pay {
+        display: inline-block;
+        vertical-align: bottom;
+    }
+    .footer .subscribe__pay svg {
+        margin-right: 15px;
+    }
+    .footer .subscribe__pay svg:last-child {
+        margin-right: 0;
+    }
+}
+
 @media (max-width: 767px) {
   .swiper-button-prev, .swiper-button-next, .footer__column--center {
     display: none;
@@ -2130,5 +2316,5 @@ img {
 }
 .catalog-fixed-menu {
     top: 80px;
-    left: 360px;
+    left: 275px;
 }
